# metalog

./: CMakeLists.txt  LICENSE  README.md  main.cc  metalog.hpp
example/: ex1.cc  metalog.cc
include/metalog/: metalog.hpp
include/metalog/core/: iterable.hpp  printable.hpp
metalog/core/: content.hpp  iostream.hpp  iterable.hpp  string.hpp
